Updated server URL

--- a/ServerMonitor/App.config
+++ b/ServerMonitor/App.config
@@ -2,11 +2,11 @@
 <configuration>
 
   <appSettings>
-    <add key="url" value="http://192.168.5.168:8080/rpas-webservices/jobs"/>
+    <add key="url" value="http://192.168.5.166:47665/jobs"/>
     <add key="user" value="admin"/>
     <add key="password" value="alerts"/>
     <add key="alertfile" value="samplealert.xml"/>
-    <add key="serveraddress" value="192.168.5.183"/>
+    <add key="serveraddress" value="192.168.5.166"/>
   </appSettings>
   
 </configuration>
